created gateway bff endpoints
