# web-portal-bff/src/model/Shared.ts
@@ -1,0 +1,3 @@
+export interface TotalMatches {
+  total: number;
+}
